Bug 363739 - "graph.html has several validation errors" [p=reed r=thunder]

--- a/webtools/new-graph/graph.html
+++ b/webtools/new-graph/graph.html
@@ -3,7 +3,7 @@
   <head>
     <title>Perf-o-matic</title>
 
-    <link rel="stylesheet" type="text/css" href="js/graph.css"></link>
+    <link rel="stylesheet" type="text/css" href="js/graph.css">
 
     <!-- MochiKit -->
     <script type="text/javascript" src="js/mochikit/MochiKit.js"></script>
@@ -70,7 +70,7 @@
             <div id="graphforms"></div>
 
             <div id="addone">
-              <img src="js/img/plus.png" class="plusminus" onclick="addGraphForm()">
+              <img src="js/img/plus.png" class="plusminus" onclick="addGraphForm()" alt="Plus">
             </div>
           </td>
         </tr>
