--- a/content/media/webaudio/test/test_mediaDecoding.html
+++ b/content/media/webaudio/test/test_mediaDecoding.html
@@ -313,9 +313,6 @@ function runResampling(test, response, callback) {
 }
 
 function runTest(test, response, callback) {
-  // We need to copy the array here, because decodeAudioData is going to neuter
-  // the array.
-  var compressedAudio = response.slice(0);
   var expectCallback = false;
   var cx = new OfflineAudioContext(test.numberOfChannels || 1,
                                    test.frames || 1, test.sampleRate);
@@ -329,7 +326,7 @@ function runTest(test, response, callback) {
 
     test.expectedBuffer = asyncResult;
     test.nativeContext = cx;
-    runResampling(test, compressedAudio, callback);
+    runResampling(test, response, callback);
   }, function onFailure() {
     ok(expectCallback, "Failure callback should fire asynchronously");
     ok(!test.valid, "Did expect failure for test " + test.url);
