--- a/dom/camera/test/test_bug1022766.html
+++ b/dom/camera/test/test_bug1022766.html
@@ -23,7 +23,7 @@ var config = {
 };
 
 function onError(e) {
-  ok(false, "Error " + e);
+  ok(false, "Error" + JSON.stringify(e));
 }
 
 var Camera = {
@@ -47,7 +47,7 @@ var Camera = {
     ok(false, "First call to autoFocus() succeeded unexpectedly");
   },
   failureOne: function test_failureOne(error) {
-    ok(error.name == "NS_ERROR_IN_PROGRESS", "First call to autoFocus() failed with: "
+    ok(error == "AutoFocusInterrupted", "First call to autoFocus() failed with: "
       + error);
     Camera.firstCallFailed = true;
     Camera.checkForDone();
@@ -62,19 +62,18 @@ var Camera = {
   },
 
   start: function test_start() {
-    function onSuccess(d) {
-      var camera = d.camera;
+    function onSuccess(camera, config) {
       Camera.cameraObj = camera;
       Camera.viewfinder.mozSrcObject = camera;
       Camera.viewfinder.play();
 
       // It doesn't matter if the emulator supports focus or not;
       // this is just testing the sequencing.
-      camera.autoFocus().then(Camera.successOne, Camera.failureOne);
-      camera.autoFocus().then(Camera.successTwo, Camera.failureTwo);
+      camera.autoFocus(Camera.successOne, Camera.failureOne);
+      camera.autoFocus(Camera.successTwo, Camera.failureTwo);
     };
 
-    navigator.mozCameras.getCamera(whichCamera, config).then(onSuccess, onError);
+    navigator.mozCameras.getCamera(whichCamera, config, onSuccess, onError);
   }
 }
 
