--- a/dom/camera/test/test_bug1037322.html
+++ b/dom/camera/test/test_bug1037322.html
@@ -46,9 +46,7 @@ var Camera = {
       SimpleTest.finish();
     }
 
-    function getCamera_onSuccess(d) {
-      var camera = d.camera;
-      var cfg = d.configuration;
+    function getCamera_onSuccess(camera, cfg) {
       Camera.cameraObj = camera;
       Camera.viewfinder.mozSrcObject = camera;
       Camera.viewfinder.play();
@@ -61,10 +59,10 @@ var Camera = {
          "Initial recorder profile = '" + cfg.recorderProfile + "'");
 
       // Apply our specific configuration
-      camera.setConfiguration(config).then(setConfig_onSuccess, onError);
+      camera.setConfiguration(config, setConfig_onSuccess, onError);
     }
 
-    navigator.mozCameras.getCamera(whichCamera, {}).then(getCamera_onSuccess, onError);
+    navigator.mozCameras.getCamera(whichCamera, {}, getCamera_onSuccess, onError);
   }
 }
 
