--- a/dom/camera/test/test_camera_hardware_init_failure.html
+++ b/dom/camera/test/test_camera_hardware_init_failure.html
@@ -34,9 +34,9 @@ var tests = [
     name: "init-failure",
     key: "init-failure",
     func: function testInitFailure(test) {
-      function onSuccess(d) {
+      function onSuccess(camera, config) {
         ok(false, "onSuccess called incorrectly");
-        d.camera.release();
+        camera.release();
         test.next();
       }
       function onError(error) {
@@ -44,7 +44,7 @@ var tests = [
         test.next();
       }
       info("Running test: init-failure");
-      navigator.mozCameras.getCamera(whichCamera, initialConfig).then(onSuccess, onError);
+      navigator.mozCameras.getCamera(whichCamera, initialConfig, onSuccess, onError);
     }
   },
   /* This test case (init-success) *must* follow the preceeding test case
@@ -53,9 +53,9 @@ var tests = [
     name: "init-success",
     key: "",
     func: function(test) {
-      function onSuccess(d) {
+      function onSuccess(camera, config) {
         ok(true, "onSuccess called correctly");
-        d.camera.release();
+        camera.release();
         test.next();
       }
       function onError(error) {
@@ -63,7 +63,7 @@ var tests = [
         test.next();
       }
       info("Running test: init-success");
-      navigator.mozCameras.getCamera(whichCamera, initialConfig).then(onSuccess, onError)
+      navigator.mozCameras.getCamera(whichCamera, initialConfig, onSuccess, onError)
     }
   }
 ];
