Bug 1103439 - Add a function to clear both chrome and nonchrome image caches. r=tn

--- a/image/test/mochitest/test_animSVGImage.html
+++ b/image/test/mochitest/test_animSVGImage.html
@@ -90,7 +90,7 @@ function main() {
 
   // We want to test the cold loading behavior, so clear cache in case an
   // earlier test got our image in there already.
-  clearImageCache();
+  clearAllImageCaches();
 
   setTimeout(myOnStopFrame, 1);
 
