Backed out changeset 292bc13fdc7f (bug 1164432) for test_try_registering_offline_disabled.html timeouts.

--- a/dom/push/test/test_try_registering_offline_disabled.html
+++ b/dom/push/test/test_try_registering_offline_disabled.html
@@ -10,7 +10,6 @@ http://creativecommons.org/licenses/publicdomain/
 <head>
   <title>Test for Bug 1150812</title>
   <script type="text/javascript" src="/tests/SimpleTest/SimpleTest.js"></script>
-  <script type="text/javascript" src="/tests/dom/push/test/test_utils.js"></script>
   <link rel="stylesheet" type="text/css" href="/tests/SimpleTest/test.css" />
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 </head>
@@ -87,17 +86,6 @@ http://creativecommons.org/licenses/publicdomain/
       });
   }
 
-  // Load chrome script to change offline status in the
-  // parent process.
-  var chromeScript = SpecialPowers.loadChromeScript(_ => {
-    var { classes: Cc, interfaces: Ci } = Components;
-    var ioService = Cc["@mozilla.org/network/io-service;1"]
-                      .getService(Ci.nsIIOService);
-    addMessageListener("change-status", function(offline) {
-      ioService.offline = offline;
-    });
-  });
-
   function offlineObserver(res) {
     this._res = res;
   }
@@ -122,13 +110,16 @@ http://creativecommons.org/licenses/publicdomain/
       obsService.addObserver(SpecialPowers.wrapCallbackObject(new offlineObserver(res)),
                              "network:offline-status-changed",
                              false);
-      chromeScript.sendAsyncMessage("change-status", offline);
+      var ioService = SpecialPowers.Cc["@mozilla.org/network/io-service;1"]
+                        .getService(SpecialPowers.Ci.nsIIOService);
+      ioService.offline = offline;
     });
   }
 
   function changePushServerConnectionEnabled(enable) {
     debug("changePushServerConnectionEnabled");
-    SpecialPowers.setBoolPref("dom.push.connection.enabled", enable);
+    SpecialPowers.pushPrefEnv({"set": [["dom.push.connection.enabled", enable]]},
+                              null);
   }
 
   function unsubscribe(sub) {
@@ -296,7 +287,13 @@ http://creativecommons.org/licenses/publicdomain/
     .then(SimpleTest.finish);
   }
 
-  setupPrefsAndMock(new MockWebSocket()).then(_ => runTest());
+  SpecialPowers.pushPrefEnv({"set": [
+    ["dom.push.enabled", true],
+    ["dom.push.connection.enabled", true],
+    ["dom.serviceWorkers.exemptFromPerDomainMax", true],
+    ["dom.serviceWorkers.enabled", true],
+    ["dom.serviceWorkers.testing.enabled", true]
+    ]}, runTest);
   SpecialPowers.addPermission("desktop-notification", true, document);
   SimpleTest.waitForExplicitFinish();
 </script>
