--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -1458,6 +1458,8 @@ var interfaceNamesInGlobalScope =
 // IMPORTANT: Do not change this list without review from a DOM peer!
     "WebGLVertexArrayObject",
 // IMPORTANT: Do not change this list without review from a DOM peer!
+    "WebGLVertexArrayObjectOES",
+// IMPORTANT: Do not change this list without review from a DOM peer!
     "WebKitCSSMatrix",
 // IMPORTANT: Do not change this list without review from a DOM peer!
     "WebSocket",
