Bug 1315905 - "Cleanup Necko http security check tests". r=valentin a=gchang
--HG--
extra : source : cd6fe5a803f3776a2d89a9a484d36f9183b205dd

--- a/dom/devicestorage/test/test_app_permissions.html
+++ b/dom/devicestorage/test/test_app_permissions.html
@@ -648,6 +648,7 @@ const DEFAULT_CSP_PRIV = "default-src *; script-src 'self'; style-src 'self' 'un
 const DEFAULT_CSP_CERT = "default-src *; script-src 'self'; style-src 'self'; object-src 'none'";
 
 SpecialPowers.pushPrefEnv({'set': [["dom.mozBrowserFramesEnabled", true],
+                                   ["network.disable.ipc.security", true],
                                    ["device.storage.enabled", true],
                                    ["device.storage.testing", true],
                                    ["device.storage.prompt.testing", false],
