Bug 1322881 - disable-asmjscache in beta.  r=bbouvier a-mozilla-beta=gchang

--- a/dom/asmjscache/test/test_cachingMulti.html
+++ b/dom/asmjscache/test/test_cachingMulti.html
@@ -36,7 +36,7 @@ https://bugzilla.mozilla.org/show_bug.cgi?id=944821
     code2 += "return g" + i + ";\n";
     code2 += "}\n";
     code2 += "ok(jsFuns.isAsmJSModule(f), 'f is an asm.js module')\n";
-    code2 += "if (assertCacheHit) ok(jsFuns.isAsmJSModuleLoadedFromCache(f), 'cache hit');\n";
+    code2 += "if (assertCacheHit) ok(!jsFuns.isAsmJSModuleLoadedFromCache(f), 'cache miss');\n";
     code2 += "var gX = f();\n";
     code2 += "ok(jsFuns.isAsmJSFunction(gX), 'gX is an asm.js function')\n";
     code2 += "ok(gX() === " + i + ", 'gX returns the correct result')\n";
