--- a/devtools/client/webconsole/index.html
+++ b/devtools/client/webconsole/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="resource://devtools/client/shared/components/splitter/GridElementResizer.css"/>
     <link rel="stylesheet" href="chrome://devtools/content/netmonitor/src/assets/styles/httpi.css"/>
     <link rel="stylesheet" href="resource://devtools/client/webconsole/components/Input/EagerEvaluation.css"/>
+    <link rel="stylesheet" href="resource://devtools/client/webconsole/components/Input/EvaluationSelector.css"/>
     <link rel="stylesheet" href="resource://devtools/client/webconsole/components/Input/ReverseSearchInput.css"/>
     <link rel="stylesheet" href="resource://devtools/client/webconsole/components/App.css"/>
     <link rel="stylesheet" href="resource://devtools/client/shared/components/Accordion.css"/>
