--- a/dom/security/test/csp/test_ignore_xfo.html
+++ b/dom/security/test/csp/test_ignore_xfo.html
@@ -37,7 +37,12 @@ function checkFinished() {
 SpecialPowers.registerObservers("xfo-on-violate-policy");
 
 function examiner() {
+  // Depending on whether xfo checks are performed in the parent
+  // or in the content process we have to use the specialpowers version
+  // for observing XFO violations. After Bug 1574372 we should be able
+  // to remove the "xfo-on-violate-policy" here.
   SpecialPowers.addObserver(this, "specialpowers-xfo-on-violate-policy");
+  SpecialPowers.addObserver(this, "xfo-on-violate-policy");
 }
 examiner.prototype  = {
   observe(subject, topic, data) {
@@ -50,6 +55,7 @@ examiner.prototype  = {
   },
   remove() {
     SpecialPowers.removeObserver(this, "specialpowers-xfo-on-violate-policy");
+    SpecialPowers.removeObserver(this, "xfo-on-violate-policy");
   }
 }
 window.examiner = new examiner();
