Backed out 2 changesets (bug 1620778) for causing test_autocomplete_mac_caret.xhtml failures
Backed out changeset 66f97d1cf94a (bug 1620778)
Backed out changeset eda75d901f4c (bug 1620778)

--- a/toolkit/content/tests/chrome/test_autocomplete_mac_caret.xhtml
+++ b/toolkit/content/tests/chrome/test_autocomplete_mac_caret.xhtml
@@ -22,8 +22,8 @@ function keyCaretTest()
   var autocomplete = $("autocomplete");
 
   autocomplete.focus();
-  checkKeyCaretTest("KEY_ArrowUp", 0, 0, true, "no value up");
-  checkKeyCaretTest("KEY_ArrowDown", 0, 0, true, "no value down");
+  checkKeyCaretTest("KEY_ArrowUp", 0, 0, false, "no value up");
+  checkKeyCaretTest("KEY_ArrowDown", 0, 0, false, "no value down");
 
   autocomplete.value = "Sample";
 
