--- a/widget/tests/test_imestate.html
+++ b/widget/tests/test_imestate.html
@@ -1207,7 +1207,9 @@ function runEditorFlagChangeTests() {
      description + "The editor doesn't get focus");
   is(gUtils.IMEStatus, gUtils.IME_STATUS_ENABLED,
      description + "IME isn't enabled on HTML editor");
-  const kIMEStateChangeFlags = Ci.nsIEditor.eEditorReadonlyMask;
+  const kIMEStateChangeFlags =
+    Ci.nsIEditor.eEditorReadonlyMask |
+    Ci.nsIEditor.eEditorDisabledMask;
   var editor = window.docShell.editor;
   var flags = editor.flags;
 
