Backed out 9 changesets (bug 1616875) for bustages complaining about RTCRtpReceiver.h CLOSED TREE
Backed out changeset 92ed87a5add4 (bug 1616875)
Backed out changeset 96b3a322e605 (bug 1616875)
Backed out changeset a301ce4e5571 (bug 1616875)
Backed out changeset ac73b2ce3e20 (bug 1616875)
Backed out changeset f5a201261e83 (bug 1616875)
Backed out changeset 36892aed2a94 (bug 1616875)
Backed out changeset 2c21627f3678 (bug 1616875)
Backed out changeset ebdad7b7b632 (bug 1616875)
Backed out changeset 3bad18c7a567 (bug 1616875)

--- a/dom/media/tests/mochitest/test_peerConnection_simulcastAnswer.html
+++ b/dom/media/tests/mochitest/test_peerConnection_simulcastAnswer.html
@@ -18,7 +18,7 @@
     is(receivers.length, 1, "We have exactly one RTP receiver");
     const receiver = receivers[0];
 
-    SpecialPowers.wrap(receiver).mozAddRIDExtension(extensionId);
+    SpecialPowers.wrap(pc._pc).mozAddRIDExtension(receiver, extensionId);
   }
 
   function selectRecvRID(pc, rid) {
@@ -26,7 +26,7 @@
     is(receivers.length, 1, "We have exactly one RTP receiver");
     const receiver = receivers[0];
 
-    SpecialPowers.wrap(receiver).mozAddRIDFilter(rid);
+    SpecialPowers.wrap(pc._pc).mozAddRIDFilter(receiver, rid);
   }
 
   runNetworkTest(() =>
