Backed out 3 changesets (bug 1825715) for causing node failures with checkBundles CLOSED TREE
Backed out changeset 53faa883781a (bug 1825715)
Backed out changeset 5ce3ad6ce483 (bug 1825715)
Backed out changeset 7f0b08e89cd1 (bug 1825715)

--- a/js/xpconnect/tests/mochitest/test_isRemoteProxy.html
+++ b/js/xpconnect/tests/mochitest/test_isRemoteProxy.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <script>
+/* eslint-disable prettier/prettier */
 
 async function addFrame(url) {
   let frame = document.createElement("iframe");
