--- a/testing/web-platform/tests/mediacapture-streams/MediaStreamTrack-MediaElement-disabled-video-is-black.https.html
+++ b/testing/web-platform/tests/mediacapture-streams/MediaStreamTrack-MediaElement-disabled-video-is-black.https.html
@@ -25,31 +25,23 @@ const cv = document.createElement("canvas");
 promise_test(async () => {
   await setMediaPermission("granted", ["camera"]);
   const stream = await navigator.mediaDevices.getUserMedia({video: true});
-  if (stream.getVideoTracks()[0].enabled) {
-    stream.getVideoTracks()[0].enabled = false;
-  }
 
-  let resolveLoadedPromise;
-  const videoLoaded = new Promise(res => resolveLoadedPromise = res)
-  var testOnceLoadeddata = function() {
-        vid.removeEventListener("loadeddata", testOnceLoadeddata, false);
-        cv.width = vid.offsetWidth;
-        cv.height = vid.offsetHeight;
-        var ctx = cv.getContext("2d");
-        ctx.drawImage(vid,0,0);
-        var imageData = ctx.getImageData(0, 0, cv.width, cv.height);
-        for (var i = 0; i < imageData.data.length; i+=4) {
-          assert_equals(imageData.data[i], 0, "No red component in pixel #" + i);
-          assert_equals(imageData.data[i + 1], 0, "No green component in pixel #" + i);
-          assert_equals(imageData.data[i + 2], 0, "No blue component in pixel #" + i);
-          assert_equals(imageData.data[i + 3], 255, "No transparency in pixel #" + i);
-        }
-        resolveLoadedPromise();
-  };
-
+  stream.getTracks()[0].enabled = false;
   vid.srcObject = stream;
   vid.play();
-  vid.addEventListener("loadeddata", testOnceLoadeddata, false);
+  await new Promise(r => vid.onloadeddata = r);
+
+  cv.width = vid.offsetWidth;
+  cv.height = vid.offsetHeight;
+  const ctx = cv.getContext("2d");
+  ctx.drawImage(vid,0,0);
+  const imageData = ctx.getImageData(0, 0, cv.width, cv.height);
+  for (let i = 0; i < imageData.data.length; i+=4) {
+    assert_equals(imageData.data[i], 0, "No red component in pixel #" + i);
+    assert_equals(imageData.data[i + 1], 0, "No green component in pixel #" + i);
+    assert_equals(imageData.data[i + 2], 0, "No blue component in pixel #" + i);
+    assert_equals(imageData.data[i + 3], 255, "No transparency in pixel #" + i);
+  }
 }, "Tests that a disabled video track in a MediaStream is rendered as blackness");
 </script>
 </body>
