Backed out changeset 736be753a5cf (bug 1691658) for causing xpcshell failures at test_redirect_different-protocol.js  CLOSED TREE

--- a/dom/security/test/cors/test_CrossSiteXHR_origin.html
+++ b/dom/security/test/cors/test_CrossSiteXHR_origin.html
@@ -47,25 +47,11 @@ var origins =
    //['https://example.com:443'],
    //['https://sub1.test1.example.com:443'],
 
+window.addEventListener("message", function(e) {
+  gen.next(e.data);
+});
 
-function initTest() {
-  // Allow all cookies, then do the actual test initialization
-  SpecialPowers.pushPrefEnv({
-    "set": [
-      // Some of this test relies on redirecting to data: URLs from http.
-      ["network.allow_redirect_to_data", true],
-      ]
-  }).then(initTestCallback);
-}
-
-function initTestCallback() {
-  window.addEventListener("message", function(e) {
-    gen.next(e.data);
-  });
-
-  gen = runTest();
-  gen.next();
-}
+gen = runTest();
 
 function* runTest() {
   var loader = document.getElementById('loader');
@@ -172,8 +158,9 @@ function* runTest() {
   SimpleTest.finish();
 }
 
-addLoadEvent(initTest);
-
+addLoadEvent(function() {
+  gen.next();
+});
 </script>
 </pre>
 </body>
