--- a/widget/tests/browser/file_ime_state_tests.html
+++ b/widget/tests/browser/file_ime_state_tests.html
@@ -5,12 +5,14 @@
 <script src="file_ime_state_test_helper.js"></script>
 <script src="file_test_ime_state_on_focus_move.js"></script>
 <script src="file_test_ime_state_on_input_type_change.js"></script>
+<script src="file_test_ime_state_on_readonly_change.js"></script>
 <script>
 "use strict";
 
 /* import-globals-from ../file_ime_state_test_helper.js */
 /* import-globals-from ../file_test_ime_state_on_focus_move.js */
 /* import-globals-from ../file_test_ime_state_on_input_type_change.js */
+/* import-globals-from ../file_test_ime_state_on_readonly_change.js */
 
 function createIMEStateWhenNoActiveElementTester(aDescription) {
   return new IMEStateWhenNoActiveElementTester(aDescription);
@@ -20,6 +22,9 @@ function createIMEStateOnFocusMoveTester(aDescription, aIndex, aWindow = window)
 }
 function createIMEStateOnInputTypeChangeTester(aSrcIndex) {
   return new IMEStateOnInputTypeChangeTester(aSrcIndex);
+}
+function createIMEStateOnReadonlyChangeTester() {
+  return new IMEStateOnReadonlyChangeTester();
 }
 </script>
 </head>
