Bug 1806756 - part 8: Rewrite IME state tests of an element outside editing host to make it possible to run in remote content r=m_kato
Differential Revision: https://phabricator.services.mozilla.com/D171203

--- a/widget/tests/browser/file_ime_state_tests.html
+++ b/widget/tests/browser/file_ime_state_tests.html
@@ -22,6 +22,9 @@ function createIMEStateInContentEditableOnReadonlyChangeTester() {
 function createIMEStateOfTextControlInContentEditableOnReadonlyChangeTester() {
   return new IMEStateOfTextControlInContentEditableOnReadonlyChangeTester();
 }
+function createIMEStateOutsideContentEditableOnReadonlyChangeTester() {
+  return new IMEStateOutsideContentEditableOnReadonlyChangeTester();
+}
 function createIMEStateWhenNoActiveElementTester(aDescription) {
   return new IMEStateWhenNoActiveElementTester(aDescription);
 }
