Bug 1806756 - part 7: Rewrite IME state tests of text controls in an editing host to make it possible to run in remote content r=m_kato
Differential Revision: https://phabricator.services.mozilla.com/D171202

--- a/widget/tests/browser/file_ime_state_tests.html
+++ b/widget/tests/browser/file_ime_state_tests.html
@@ -19,6 +19,9 @@
 function createIMEStateInContentEditableOnReadonlyChangeTester() {
   return new IMEStateInContentEditableOnReadonlyChangeTester();
 }
+function createIMEStateOfTextControlInContentEditableOnReadonlyChangeTester() {
+  return new IMEStateOfTextControlInContentEditableOnReadonlyChangeTester();
+}
 function createIMEStateWhenNoActiveElementTester(aDescription) {
   return new IMEStateWhenNoActiveElementTester(aDescription);
 }
