--- a/browser/base/content/browser.xhtml
+++ b/browser/base/content/browser.xhtml
@@ -61,33 +61,34 @@
         persist="screenX screenY width height sizemode"
         data-l10n-sync="true">
 <head>
-  <link rel="localization" href="browser/search.ftl"/>
   <link rel="localization" href="branding/brand.ftl"/>
-  <link rel="localization" href="browser/branding/sync-brand.ftl"/>
-  <link rel="localization" href="toolkit/branding/brandings.ftl"/>
-  <link rel="localization" href="toolkit/global/textActions.ftl"/>
+  <link rel="localization" href="browser/allTabsMenu.ftl"/>
+  <link rel="localization" href="browser/appmenu.ftl"/>
   <link rel="localization" href="browser/browser.ftl"/>
   <link rel="localization" href="browser/browserContext.ftl"/>
   <link rel="localization" href="browser/browserSets.ftl"/>
-  <link rel="localization" href="browser/menubar.ftl"/>
-  <link rel="localization" href="browser/protectionsPanel.ftl"/>
-  <link rel="localization" href="browser/appmenu.ftl"/>
-  <link rel="localization" href="browser/panelUI.ftl"/>
-  <link rel="localization" href="preview/identityCredentialNotification.ftl"/>
-  <link rel="localization" href="preview/interventions.ftl"/>
-  <link rel="localization" href="browser/sidebarMenu.ftl"/>
-  <link rel="localization" href="browser/allTabsMenu.ftl"/>
-  <link rel="localization" href="browser/places.ftl"/>
-  <link rel="localization" href="toolkit/printing/printUI.ftl"/>
-  <link rel="localization" href="browser/tabbrowser.ftl"/>
-  <link rel="localization" href="preview/firefoxSuggest.ftl"/>
-  <link rel="localization" href="locales-preview/translations.ftl"/>
-  <link rel="localization" href="browser/toolbarContextMenu.ftl"/>
-  <link rel="localization" href="browser/screenshots.ftl"/>
   <link rel="localization" href="browser/firefoxView.ftl"/>
-  <link rel="localization" href="browser/webrtcIndicator.ftl"/>
+  <link rel="localization" href="browser/menubar.ftl"/>
   <link rel="localization" href="browser/originControls.ftl"/>
+  <link rel="localization" href="browser/panelUI.ftl"/>
+  <link rel="localization" href="browser/places.ftl"/>
+  <link rel="localization" href="browser/protectionsPanel.ftl"/>
+  <link rel="localization" href="browser/screenshots.ftl"/>
+  <link rel="localization" href="browser/search.ftl"/>
+  <link rel="localization" href="browser/sidebarMenu.ftl"/>
+  <link rel="localization" href="browser/tabbrowser.ftl"/>
+  <link rel="localization" href="browser/toolbarContextMenu.ftl"/>
   <link rel="localization" href="browser/unifiedExtensions.ftl"/>
+  <link rel="localization" href="browser/webrtcIndicator.ftl"/>
+  <link rel="localization" href="toolkit/branding/accounts.ftl"/>
+  <link rel="localization" href="toolkit/branding/brandings.ftl"/>
+  <link rel="localization" href="toolkit/global/textActions.ftl"/>
+  <link rel="localization" href="toolkit/printing/printUI.ftl"/>
+  <!-- Untranslated FTL files -->
+  <link rel="localization" href="locales-preview/translations.ftl" />
+  <link rel="localization" href="preview/firefoxSuggest.ftl" />
+  <link rel="localization" href="preview/identityCredentialNotification.ftl" />
+  <link rel="localization" href="preview/interventions.ftl" />
 
   <title data-l10n-id="browser-main-window-title"></title>
 
